small config fixes